test/examples/bad/val_separated_from_let.ml
(* val should only apply to immediately following let *)
val x : int
open Stdlib
let x = 42
